fix(login): padding on ios notch devices

--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -32,11 +32,17 @@ ion-content {
   position: relative;
   --background: #fafafa !important; // always light theme
 }
-ion-item { // always light theme
+ion-item {
+  // always light theme
   --background: #f5f5f5 !important;
   --color: #454343 !important;
   --background-activated: #e0e0e0 !important;
   --border-color: #e0e0e0 !important;
+}
+
+.main-grid {
+  padding-top: constant(safe-area-inset-top); //for iOS 11.2
+  padding-top: env(safe-area-inset-top); //for iOS 11.1
 }
 
 .btn_center {
